# itmo-young-congress

./: .gitignore  README.md  presentation_draft.md  presentation_speech.md  pyproject.toml
configs/: anchor-backpressure.json  article-variable-input.json  burst.json  combined-stress.json  cpu-pressure.json  critical-event-injection.json  memory-pressure.json  queue-saturation.json  steady.json  storage-degradation.json  stress-response.json
scripts/: plot_results.py
src/: cli.py  cli_common.py  cli_demo.py  cli_tools.py  crypto.py  demo.py  domain.py  itmo_young_congress.py  policies.py  reporting.py  settings.py  simulator.py
src/itmo_young_congress/: __init__.py  __main__.py  cli.py  crypto.py  demo.py  domain.py  policies.py  reporting.py  simulator.py
tests/: test_cli.py  test_crypto.py  test_demo.py  test_plot_results.py  test_policies.py  test_reporting.py  test_simulator.py  test_stress.py
