[project]
name = "itmo-young-congress"
version = "0.1.0"
description = "Adaptive Merkle epoch simulator for ITMO Young Congress thesis"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
