[project]
name = "itmo-young-congress"
version = "0.1.0"
description = "Adaptive Merkle epoch simulator for ITMO Young Congress thesis"
requires-python = ">=3.9"
dependencies = [
  "cryptography>=42.0.0",
  "matplotlib>=3.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "itmo_young_congress",
  "cli",
  "cli_common",
  "cli_demo",
  "cli_tools",
  "crypto",
  "demo",
  "domain",
  "policies",
  "reporting",
  "settings",
  "simulator",
]
